# gpt

./: Cargo.toml  README.md
examples/: basic.rs  client.rs  server.rs
src/: lib.rs  main.rs
src/completer/: completer.rs  gpt_completer.rs  hardcoded_completer.rs  mod.rs  tree.rs
