[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
derive_more = "0.99.18"
indoc = "2.0.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
text_io = "0.1.12"
tokio = { version = "1.39.1", features = ["full"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
